--- a/themes/default/404.jade
+++ b/themes/default/404.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
   head
-    title= admin
+    title 404
     link(href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css', rel='stylesheet')
     script(src='//code.jquery.com/jquery-3.1.0.min.js')
   body
