--- a/themes/default/admin.jade
+++ b/themes/default/admin.jade
@@ -1,52 +1,50 @@
-doctype html
-html(lang="en")
-  head
-    title Admin
-    | !{ admin.head(locals)}
-
-    script.
-      $(function(){
-        $("#page").submit(function( event ) {
-          var elements = $('#page').serializeArray();
-          var form = {};
-          for(var e in elements){
-            form[elements[e].name] = elements[e].value;
+script.
+  $(function(){
+    $("#page").submit(function( event ) {
+      var elements = $('#page').serializeArray();
+      var form = {};
+      for(var e in elements){
+        form[elements[e].name] = elements[e].value;
+      }
+      if(form.url[0] != '/')
+        form.url = '/'+form.url
+      if(form.url[form.url.length-1] == '/' && form.url!='/')
+        form.url = form.url.substr(0,form.url.length-1);
+      form.date = (new Date()).getTime();
+      console.log(form);
+      console.log('/pages'+form.url);
+      $.ajax({
+        url:'/pages'+form.url,
+        type:'put',
+        data:form,
+        success:function(data){
+          console.log(data);
+          if(data.status)
+            window.location.href = '/pages'+form.url;
+          else {
+            console.log(data.error);
+            alert(data.error);
           }
-          if(form.url[0] != '/')
-            form.url = '/'+form.url
-          if(form.url[form.url.length-1] == '/' && form.url!='/')
-            form.url = form.url.substr(0,form.url.length-1);
-          form.date = (new Date()).getTime();
-          console.log(form);
-          console.log('/pages'+form.url);
-          $.ajax({
-            url:'/pages'+form.url,
-            type:'put',
-            data:form,
-            success:function(data){
-              console.log(data);
-              if(data.status)
-                window.location.href = '/pages'+form.url;
-              else {
-                console.log(data.error);
-                alert(data.error);
-              }
-            },
-            error: function(err, body ){
-              console.log(err);
-              alert(err.responseJSON.error);
-            }
-          });
-          event.preventDefault();
-        });
-      })
-  body
-    | !{ admin.nav(locals) }
-    h1 Build a site
-    form#page
-      each def,val in {url:'/',title:'Title',options:'{}'}
-        input(required type='text' id=val value=def name=val placeholder=val)
-        br
-      textarea(required id='data' name='data' placeholder='data')
-      br
-      input(type='submit')
+        },
+        error: function(err, body ){
+          console.log(err);
+          alert(err.responseJSON.error);
+        }
+      });
+      event.preventDefault();
+    });
+  })
+h1 Build a site
+form#page
+  each def,val in {url:'/',title:'Title',options:'{}'}
+    input(required type='text' id=val value=def name=val placeholder=val)
+    br
+  textarea(required id='data' name='data' placeholder='data')
+  br
+  input#cache(checked type='checkbox' name='cache' )
+  br
+  select#template(required name='template' )
+    each val in admin.templates()
+      option(value=val) #{val}
+  br
+  input(type='submit')
