--- a/themes/default/editTemplate.jade
+++ b/themes/default/editTemplate.jade
@@ -1,14 +1,15 @@
 script.
   $(document).ready( function (){
-       dynamicForm('#page', function( e, data){
+       dynamicForm('#template', function( e, data){
            e.preventDefault();
            console.log(data);
            $.ajax({
               type: 'POST',
               data: data,
+              url: '/template/' + data.title,
               success: function(data){
                   if(data.status){
-                      alert('Page edited!');
+                      alert('Template edited!');
                   } else {
                       alert(data);
                   }
@@ -19,21 +20,12 @@ script.
           });
        });
   });
-h1
-  a(href='/pages#{editPage.url}')= editPage.url
-form#page(method="POST")
+form#template(method="POST")
   .form-group
     h3 Title
     input.form-control(type='text' name='title' value='#{editPage.title}')
     h3 Content
     textarea.form-control(name='data' rows='15')= editPage.data
-    h3 Cache
-    input.form-control(type='checkbox' name='cache' checked=editPage.cache)
-    h3 Template
-    select.form-control(name='template' value='#{editPage.template}')
-      each val in admin.templates()
-        option(value=val selected=(editPage.template == val)) #{val}
-    br
     input.btn.btn-primary(type='submit')
 
 
