Created flawed login system

--- a/themes/default/templates.jade
+++ b/themes/default/templates.jade
@@ -18,6 +18,5 @@ table.table.table-striped
           ) Delete
           
           a(href="/template/#{template}")
-            b
-              Edit
+            b Edit
           
