Fixed cache bug, made login redirect when logged in, made it possible to close registration

--- a/themes/default/register.jade
+++ b/themes/default/register.jade
@@ -11,7 +11,7 @@ script.
                       alert('Account created!');
                       window.location = '/login';
                   } else {
-                      alert(data);
+                      alert(data.error);
                   }
               },
               error: function(err){
