--- a/themes/default/adminTemplate.jade
+++ b/themes/default/adminTemplate.jade
@@ -6,7 +6,7 @@ html(lang="en")
     link(href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css', rel='stylesheet')
     script(src='//code.jquery.com/jquery-2.2.4.min.js')
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
-    script(src='/static/admin.js')
+    script(src='/staticAdmin/default/admin/admin.js')
   body
     nav.navbar.navbar-default
       .container-fluid
