--- a/themes/default/template.jade
+++ b/themes/default/template.jade
@@ -1,24 +1,36 @@
+script(src="/staticAdmin/default/codemirror/codemirror.js")
+script(src="/staticAdmin/default/codemirror/theme/sublime.js")
+script(src="/staticAdmin/default/codemirror/theme/javascript.js")
+script(src="/staticAdmin/default/codemirror/theme/pug.js")
+link(rel="stylesheet" href="/staticAdmin/default/codemirror/codemirror.css")
+link(rel="stylesheet" href="/staticAdmin/default/codemirror/theme/monokai.css")
+
 script.
   $(document).ready( function (){
-       dynamicForm('#template', function( e, data ) {
-           e.preventDefault();
-           console.log(data);
-           $.ajax({
-              type: 'PUT',
-              url: '/template/' + data.title,
-              data: data,
-              success: function(data){
-                  if(data.status){
-                      alert('Template Created!');
-                  } else {
-                      alert(data);
-                  }
-              },
-              error: function(err){
-                  console.log(err);
-              }
-          });
-       });
+    
+    var dataTextArea = addCodeMirror( document.getElementById( 'data' ) );
+    dynamicForm('#template', function( e, data ) {
+      data.data = dataTextArea.getValue();
+      delete data[ 'undefined' ];
+      e.preventDefault();
+
+      console.log(data);
+      $.ajax({
+        type: 'PUT',
+        url: '/template/' + data.title,
+        data: data,
+        success: function(data){
+            if(data.status){
+                alert('Template Created!');
+            } else {
+                alert(data.error);
+            }
+        },
+        error: function(err){
+            console.log(err);
+        }
+      });
+    });
   });
 h1 New Template
 form#template(method="PUT")
@@ -26,6 +38,6 @@ form#template(method="PUT")
     h3 Title
     input.form-control(type='text' name='title')
     h3 Content
-    textarea.form-control(name='data' rows='15')
+    textarea#data.form-control(name='data' rows='15')
     input.btn.btn-primary(type='submit')
 
