--- a/themes/default/adminTemplateBlank.jade
+++ b/themes/default/adminTemplateBlank.jade
@@ -3,10 +3,10 @@ html(lang="en")
   head
     title= title
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    link(href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css', rel='stylesheet')
-    script(src='//code.jquery.com/jquery-2.2.4.min.js')
-    script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
-    script(src='/staticAdmin/default/admin/admin.js')
+    link(href='/static/default/bootstrap/bootstrap.min.css', rel='stylesheet')
+    script(src='/static/default/bootstrap/jquery-2.2.4.min.js')
+    script(src='/static/default/bootstrap/bootstrap.min.js')
+    script(src='/static/default/admin/admin.js')
   body
     .container
       | !{pageData}
