--- a/themes/default/edit.jade
+++ b/themes/default/edit.jade
@@ -1,23 +1,41 @@
+script(src="/staticAdmin/default/codemirror/codemirror.js")
+script(src="/staticAdmin/default/codemirror/theme/sublime.js")
+script(src="/staticAdmin/default/codemirror/theme/javascript.js")
+script(src="/staticAdmin/default/codemirror/theme/pug.js")
+link(rel="stylesheet" href="/staticAdmin/default/codemirror/codemirror.css")
+link(rel="stylesheet" href="/staticAdmin/default/codemirror/theme/monokai.css")
+
 script.
   $(document).ready( function (){
-       dynamicForm('#page', function( e, data){
-           e.preventDefault();
-           console.log(data);
-           $.ajax({
-              type: 'POST',
-              data: data,
-              success: function(data){
-                  if(data.status){
-                      alert('Page edited!');
-                  } else {
-                      alert(data);
-                  }
-              },
-              error: function(err){
-                  console.log(err);
+   
+    var dataTextArea = addCodeMirror( document.getElementById( 'data' ) );
+    
+    var setupForm = function(){
+      dynamicForm('#page', function( e, data ) {
+        e.preventDefault();
+        data.data = dataTextArea.getValue();
+        delete data[ 'undefined' ];
+        console.log( data );
+
+        $.ajax({
+          type: 'POST',
+          data: data,
+          success: function(data){
+              if(data.status){
+                  alert('Page edited!');
+              } else {
+                  alert(data.error);
               }
-          });
-       });
+          },
+          error: function(err){
+              console.log(err);
+          }
+        });
+      });
+    };
+
+    setupForm();
+
   });
 h1
   a(href='/pages#{editPage.url}')= editPage.url
@@ -26,7 +44,7 @@ form#page(method="POST")
     h3 Title
     input.form-control(type='text' name='title' value='#{editPage.title}')
     h3 Content
-    textarea.form-control(name='data' rows='15')= editPage.data
+    textarea#data.form-control(name='data' rows='15')= editPage.data
     h3 Cache
     input.form-control(type='checkbox' name='cache' checked=editPage.cache)
     h3 Template
