--- a/themes/default/adminTemplate.jade
+++ b/themes/default/adminTemplate.jade
@@ -1,41 +1,41 @@
 doctype html
 html(lang="en")
-  head
-    title= title
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    link(href='/static/default/bootstrap/bootstrap.min.css', rel='stylesheet')
-    script(src='/static/default/bootstrap/jquery-2.2.4.min.js')
-    script(src='/static/default/bootstrap/bootstrap.min.js')
-    script(src='/static/default/admin/admin.js')
-  body
-    nav.navbar.navbar-default
-      .container-fluid
-        .navbar-header
-          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-2', aria-expanded='false')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='/admin/') Admin
-        #bs-example-navbar-collapse-2.collapse.navbar-collapse
-          ul.nav.navbar-nav
-            li
-              a(href='/admin/pages') Pages
-            li
-              a(href='/admin/templates') Templates
-            li
-              a(href='/register') Register
-            li
-              a(href='/admin/settings') Settings 
-          form.navbar-form.navbar-left(role='search' method='GET' action='/admin/pages')
-            .form-group
-              input.form-control(type='text', placeholder='Search' name='search')
-            button.btn.btn-default(type='submit') Submit
-          ul.nav.navbar-nav.navbar-right
-            li
-              a(href='/logout') Logout
-    .container
-      .toastContainer
-        each val in toasts
-          .alert.alert-danger= val
-      | !{pageData}
+	head
+		title= title
+		meta(name='viewport', content='width=device-width, initial-scale=1.0')
+		link(href='/static/default/bootstrap/bootstrap.min.css', rel='stylesheet')
+		script(src='/static/default/bootstrap/jquery-2.2.4.min.js')
+		script(src='/static/default/bootstrap/bootstrap.min.js')
+		script(src='/static/default/admin/admin.js')
+	body
+		nav.navbar.navbar-default
+			.container-fluid
+				.navbar-header
+					button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-2', aria-expanded='false')
+						span.sr-only Toggle navigation
+						span.icon-bar
+						span.icon-bar
+						span.icon-bar
+					a.navbar-brand(href='/admin/') Admin
+				#bs-example-navbar-collapse-2.collapse.navbar-collapse
+					ul.nav.navbar-nav
+						li
+							a(href='/admin/pages') Pages
+						li
+							a(href='/admin/templates') Templates
+						li
+							a(href='/register') Register
+						li
+							a(href='/admin/settings') Settings 
+					form.navbar-form.navbar-left(role='search' method='GET' action='/admin/pages')
+						.form-group
+							input.form-control(type='text', placeholder='Search' name='search')
+						button.btn.btn-default(type='submit') Submit
+					ul.nav.navbar-nav.navbar-right
+						li
+							a(href='/logout') Logout
+		.container
+			.toastContainer
+				each val in toasts
+					.alert.alert-danger!= val
+			| !{pageData}
