--- a/themes/default/adminTemplate.jade
+++ b/themes/default/adminTemplate.jade
@@ -26,6 +26,8 @@ html(lang="en")
 						li
 							a(href='/register') Register
 						li
+							a(href='/admin/files') Files
+						li
 							a(href='/admin/settings') Settings 
 					form.navbar-form.navbar-left(role='search' method='GET' action='/admin/pages')
 						.form-group
