--- a/themes/default/pages.jade
+++ b/themes/default/pages.jade
@@ -1,3 +1,9 @@
+script.
+	$(document).ready( function() {
+		deleteRequest();
+	});
+
+
 a.btn.btn-primary( href="/admin/page" ) New Page
 
 if pages.length > 0
