--- a/themes/default/template_1.jade
+++ b/themes/default/template_1.jade
@@ -1,29 +1,37 @@
+mixin renderNav( nav )
+	each val in nav
+		if(val.children)
+			li.dropdown.dropdown-submenu
+				a.dropdown-toggle.trigger(href='#' data-toggle='dropdown' tabindex='-1')= val.title
+					span.caret
+				ul.dropdown-menu
+					+renderNav(val.children)
+		else
+			li
+				a(href='#{val.url}')= val.title
+
 doctype html
 html(lang="en")
 	head
-		title 
+		title= title
+		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		link(href='/static/default/bootstrap/bootstrap.min.css', rel='stylesheet')
+		link(href='/static/default/admin/admin.css', rel='stylesheet')
 		script(src='/static/default/bootstrap/jquery-2.2.4.min.js')
 		script(src='/static/default/bootstrap/bootstrap.min.js')
 		script(src='/static/default/admin/admin.js')
-
 	body
 		nav.navbar.navbar-default
 			.container-fluid
 				.navbar-header
-					button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-2', aria-expanded='false')
+					button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false')
 						span.sr-only Toggle navigation
 						span.icon-bar
 						span.icon-bar
 						span.icon-bar
-					a.navbar-brand(href='/') Site
-				#bs-example-navbar-collapse-2.collapse.navbar-collapse
+					a.navbar-brand(href='/')= site.settings.sitename
+				#navbar.collapse.navbar-collapse
 					ul.nav.navbar-nav
-						li
-							a(href='/asdf') Example Page
-					form.navbar-form.navbar-left(role='search' method='GET' action='/admin/pages')
-						.form-group
-							input.form-control(type='text', placeholder='Search' name='search')
-						button.btn.btn-default(type='submit') Submit
-		h1= title
-		p !{pageData}
+						+renderNav(site.settings.navigation)
+		.container
+			| !{pageData}
